# Project Name
PROJECT(simpleAES)
# CMake Version
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -O2")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -O2")
# SET(SRC_LIST src/main.cpp)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../bin)

# Add Source Files
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src DIR_SRCS)
# Add header files
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
# Add link library
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

ADD_EXECUTABLE(${PROJECT_NAME} ${DIR_SRCS})

#TARGET_LINK_LIBRARIES(CRNode thread)